# BlockmanLORD

./: .eleventy.js  .gitignore  CMakeLists.txt  LICENSE  README.htm  README.html  README.md  TODO.md  _config.yml  astro.config.mjs  jsconfig.json  main.cpp  package.json  renovate.json  tailwind.config.mjs  vue.config.js
.github/workflows/: cmake-build.yml  cmake-multi-platform.yml  web-build.yml  web-deploy.yml
cmake/: get_assimp.cmake  get_boost.cmake  get_bullet.cmake  get_cpm.cmake  get_curl.cmake  get_dx.cmake  get_gl.cmake  get_gles.cmake  get_glfw.cmake  get_imgui.cmake  get_m.cmake  get_ogre.cmake  get_opengl.cmake  get_physx.cmake  get_sdl.cmake  get_sol2.cmake  get_vulkan.cmake  get_zlib.cmake
cmake/source/: get_actor.cmake  get_common.cmake  get_gui.cmake  get_lua.cmake  get_model.cmake  get_network.cmake  get_world.cmake
dev/editor/: blord_editor.cpp
dev/server/: blord_server.cpp
libs/ioaccess/: StdioInterface.cpp  StdioInterfacePrivate.h
res/: Info.plist  app.desktop  app.desktop.in  app.manifest
res/mipmap-xxxhdpi/: app_launcher.rc
source/actor/: CMakeLists.txt
source/common/: CMakeLists.txt  blord_config.hpp  blord_debug.hpp  blord_version.hpp
source/gui/: CMakeLists.txt  README.md
source/lua/: CMakeLists.txt
source/model/: CMakeLists.txt  README.md
source/model/render/: blord_render.hpp
source/network/: CMakeLists.txt
source/server/: blord_server.cpp
source/world/: CMakeLists.txt  blord_map.cpp  blord_map.h  debug.hpp  util.hpp
source/world/block/: Block.cpp  Block.h  BlockInfo.h  BlockMaps.cpp  BlockState.cpp  BlockState.h  BlockStateValue.cpp  BlockStateValue.h
source/world/chunk/: Chunk.cpp  Chunk.h  ChunkSection.cpp
source/world/entity/: Player.cpp
source/world/level/: Level.cpp  Level.h
source/world/map/: MCRegion.cpp  MCRegion.h  Map.cpp
source/world/model/: Coords.h  Element.cpp  Element.h  Face.cpp  Face.h  Model.cpp  Model.h  Rotation.cpp  Rotation.h  Variant.cpp  Variant.h
src/: App.vue
src/components/: background.astro  footer.astro  header.astro  layout.astro
src/pages/: about.astro  docs.astro  index.astro
web/: about.md
web/.vuepress/: bars.js  config.js
web/pages/docs/: index.ejs
windows_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BlockmanLORD.sln  BlockmanLORD.vcxproj  BlockmanLORD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  blord.sln  blord.vcxproj
windows_vs/assimp_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  assimp.pc  uninstall.vcxproj  uninstall.vcxproj.filters
windows_vs/assimp_build/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters
windows_vs/assimp_build/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  zlib.pc  zlib.sln  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
windows_vs/assimp_build/include/assimp/: revision.h
windows_vs/assimp_build/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  unit.vcxproj  unit.vcxproj.filters
windows_vs/assimp_build/test/headercheck/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
